# shopping-list-backend

./: Cargo.toml  README.md
api/: mod.rs
models/: item_model.rs  mod.rs
src/: main.rs
src/api/: shopping_list_api.rs
src/repository/: mongodb_repo.rs
